5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1592_2043.log
== SUBMITION (2019-03-22 22:19:32) 
-- CODE:
num = float(input())
num2 = float(input())
num3 = float(input())
num4 = float(input())
total = ((num*1 + num2*2 + num3*3 + num4*4)/ 10)
print(round(total, 2)
-- EXECUTION TIME:
0.186643
-- ERROR:
  File "/home/codebench/codes/1592/2043/main.py", line 7
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:20:20) 
-- CODE:
num = float(input())
num2 = float(input())
num3 = float(input())
num4 = float(input())
total = ((num*1 + num2*2 + num3*3 + num4*4)/ 10)
print(float(round(total, 2))
-- EXECUTION TIME:
0.117017
-- ERROR:
  File "/home/codebench/codes/1592/2043/main.py", line 7
    
                                ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:23:03) 
-- CODE:
num = float(input())
num2 = float(input())
num3 = float(input())
num4 = float(input())
total = ((num*1 + num2*2 + num3*3 + num4*4)/ 10)
print(round(total, 2)
-- ERROR:
File "XXXX", line 7
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:23:52) 
-- CODE:
num = float(input())
num2 = float(input())
num3 = float(input())
num4 = float(input())
total = (num*1 + num2*2 + num3*3 + num4*4)
print(round(total/10, 2)
-- EXECUTION TIME:
0.184326
-- ERROR:
  File "/home/codebench/codes/1592/2043/main.py", line 7
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:24:06) 
-- CODE:
num = float(input())
num2 = float(input())
num3 = float(input())
num4 = float(input())

total = (num*1 + num2*2 + num3*3 + num4*4)

print(round(total/10, 2)
-- EXECUTION TIME:
0.131574
-- ERROR:
  File "/home/codebench/codes/1592/2043/main.py", line 9
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:24:23) 
-- CODE:
num = float(input())
num2 = float(input())
num3 = float(input())
num4 = float(input())

total = (num*1 + num2*2 + num3*3 + num4*4)

print(round(total/10, 2)
-- ERROR:
File "XXXX", line 9
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:35:15) 
-- CODE:
num = float(input("nota:"))
num2 = float(input("nota:"))
num3 = float(input("nota:'"))
num4 = float(input("nota:"))

total = (num*1 + num2*2 + num3*3 + num4*4)

print(round(total/10, 2)
-- ERROR:
File "XXXX", line 9
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:35:20) 
-- CODE:
num = float(input("nota:"))
num2 = float(input("nota:"))
num3 = float(input("nota:'"))
num4 = float(input("nota:"))

total = (num*1 + num2*2 + num3*3 + num4*4)

print(round(total/10, 2)
-- ERROR:
File "XXXX", line 9
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:35:26) 
-- CODE:
num = float(input("nota:"))
num2 = float(input("nota:"))
num3 = float(input("nota:'"))
num4 = float(input("nota:"))

total = (num*1 + num2*2 + num3*3 + num4*4)

print(round(total/10, 2)
-- ERROR:
File "XXXX", line 9
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:35:42) 
-- CODE:
num = float(input("nota:"))
num2 = float(input("nota:"))
num3 = float(input("nota:'"))
num4 = float(input("nota:"))

total = (num*1 + num2*2 + num3*3 + num4*4)

print(round("total"/10, 2)
-- EXECUTION TIME:
0.193178
-- ERROR:
  File "/home/codebench/codes/1592/2043/main.py", line 9
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:42:17) 
-- CODE:
num = float(input("nota:"))
num2 = float(input("nota:"))
num3 = float(input("nota:'"))
num4 = float(input("nota:"))

total = ((num*1 + num2*2 + num3*3 + num4*4)/10)

print(round(total, 1)
-- EXECUTION TIME:
0.108452
-- ERROR:
  File "/home/codebench/codes/1592/2043/main.py", line 9
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:42:25) 
-- CODE:
num = float(input("nota:"))
num2 = float(input("nota:"))
num3 = float(input("nota:'"))
num4 = float(input("nota:"))

total = ((num*1 + num2*2 + num3*3 + num4*4)/10)

print(round(total, 1))
-- EXECUTION TIME:
0.195797
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:42:46) 
-- CODE:
num = float(input("nota:"))
num2 = float(input("nota:"))
num3 = float(input("nota:'"))
num4 = float(input("nota:"))

total = ((num*1 + num2*2 + num3*3 + num4*4)/10)

print(round(total, 2))
-- EXECUTION TIME:
0.144323
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
